# auth-demo

./: .gitignore  Cargo.toml  Complete_Auth_Implementation_Guide.md  Production_Auth_Guide.md  README.md
src/: cli.rs  main.rs  server.rs
src/middleware/: auth.rs
src/models/: user.rs
src/oauth/: claims.rs  client.rs  google.rs  jwks.rs  jwks_cache.rs  jwt.rs  mod.rs
src/session/: file.rs  mod.rs  store.rs
src/utils/: crypto.rs  mod.rs  session_encryption.rs
