[package]
name = "demo-oauth-oidc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
tokio = { version = "1.42.2", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.91"
axum = { version = "0.7.0", features = ["macros"] }
tower = "0.4"
rand = "0.8"
urlencoding = "2.1.0"
webbrowser = "0.8.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
jsonwebtoken = "9"